--- a/05-food.yml
+++ b/05-food.yml
@@ -11,7 +11,7 @@
 
   - name: Host code
     git:
-      repo: https://github.com/CeeyIT-Solutions/food3.git
+      repo: https://github.com/Faith-Collins/food3.git
       dest: /var/www/html
 
 ...
